Be more careful with pointers

BUG:336804